--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/native-stack": "^6.9.25",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
+    "i": "^0.3.7",
+    "npm": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-maps": "1.10.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-maps": "1.10.0"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
